// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failureLogger correctly logs Error 1`] = `
Object {
  "category": "NODE_SYSTEM_ERROR",
  "message": "some error message",
  "name": "TypeError",
  "operation": "someOperation",
  "result": "failure",
}
`;

exports[`failureLogger correctly logs ExtendedErrorError with status 1`] = `
Object {
  "category": "CUSTOM_ERROR",
  "message": "some error message",
  "name": "ExtendedError",
  "operation": "someOperation",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger correctly logs ExtendedErrorError with status 2`] = `
Object {
  "category": "CUSTOM_ERROR",
  "name": "ExtendedError",
  "operation": "someOperation",
  "result": "failure",
  "status": 404,
}
`;

exports[`failureLogger correctly logs exceptions not described as object 1`] = `
Object {
  "message": "some error message",
  "result": "failure",
}
`;

exports[`failureLogger correctly logs fetch network error 1`] = `
Object {
  "category": "FETCH_NETWORK_ERROR",
  "code": "ENOTFOUND",
  "message": "request to https://unknown/ failed, reason: some reason",
  "result": "failure",
}
`;

exports[`failureLogger correctly logs fetch response error with status 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "500 Internal Server Error",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger correctly logs fetch response error with status 2`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "404 Not Found",
  "result": "failure",
  "status": 404,
}
`;

exports[`failureLogger correctly logs nError with status 1`] = `
Object {
  "category": "CUSTOM_ERROR",
  "message": "some error message",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger correctly logs nError with status 2`] = `
Object {
  "category": "CUSTOM_ERROR",
  "message": "some error message",
  "result": "failure",
  "status": 404,
}
`;

exports[`failureLogger correctly logs null or undefined input 1`] = `
Object {
  "action": "someAction",
  "operation": "someOperation",
  "result": "failure",
}
`;

exports[`failureLogger correctly logs plain object with status 1`] = `
Object {
  "category": "CUSTOM_ERROR",
  "message": "some message to describe the case",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger correctly logs plain object with status 2`] = `
Object {
  "category": "CUSTOM_ERROR",
  "message": "some message to describe the case",
  "result": "failure",
  "status": 404,
}
`;

exports[`failureLogger logs only values from the error object ExtendedError with empty fields 1`] = `
Object {
  "category": "CUSTOM_ERROR",
  "name": "ExtendedError",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger logs only values from the error object ExtendedError with methods 1`] = `
Object {
  "category": "CUSTOM_ERROR",
  "name": "ExtendedError",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger logs only values from the error object nError with empty fields 1`] = `
Object {
  "category": "CUSTOM_ERROR",
  "result": "failure",
}
`;

exports[`failureLogger logs only values from the error object nError with methods 1`] = `
Object {
  "category": "CUSTOM_ERROR",
  "message": "some error message",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger logs only values from the error object plain object with methods 1`] = `
Object {
  "category": "CUSTOM_ERROR",
  "message": "some message to describe the case",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger mute non-reserved fields of LOGGER_MUTE_FIELDS including .stack in ExtendedError 1`] = `
Object {
  "action": "SOME_ACTION",
  "category": "CUSTOM_ERROR",
  "name": "ExtendedError",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger mute non-reserved fields of LOGGER_MUTE_FIELDS including .stack in fetch response error 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "application/json; charset=utf-8",
  "message": Object {
    "message": "test",
  },
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger mute non-reserved fields of LOGGER_MUTE_FIELDS including .stack in nError 1`] = `
Object {
  "action": "SOME_ACTION",
  "category": "CUSTOM_ERROR",
  "result": "failure",
}
`;

exports[`failureLogger mute non-reserved fields of LOGGER_MUTE_FIELDS including .stack in plain object 1`] = `
Object {
  "action": "SOME_ACTION",
  "category": "CUSTOM_ERROR",
  "result": "failure",
}
`;
